css/main.css
#container { padding-top: 50px; width: 940px; margin: 0 auto; }

#footer { width: 940px; margin: 0 auto; text-align: right; }

table .titles { font-weight: bold; color: #439BF6; }
table .title { font-weight: bold; color: #439BF6; }

.markItUp { width: 580px !important; }
.markItUpEditor { width: 520px !important; }

/* Add QSO CSS */
.rst { width: 50px !important; }
.input_date { width: 70px !important; }
.input_time { width: 55px !important; }
.band { width: 80px; }
.mode { width: 80px; }
#callsign { text-transform: uppercase; }
#locator { text-transform: uppercase; }
#sat_name { text-transform: uppercase; }
#sat_mode { text-transform: uppercase; }
#iota_ref { text-transform: uppercase; }

input[type="text"] {
	color: #000000 !important;
}

.pull-right { color: #fff; }

.icon_qsl { background: transparent url('../images/icons/qslcard.png') no-repeat center left; padding-left: 20px; font-weight: bold; }

.icon_stats { background: transparent url('../images/icons/stats.png') no-repeat center left; padding-left: 20px; font-weight: bold; }

.icon_world { background: transparent url('../images/icons/world.png') no-repeat center left; padding-left: 20px; font-weight: bold; }

.topbar input {
	width: 100px !important;
}

